<resources>
    <string name="app_name">FoodBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="hint_quantity">Quantity</string>
    <string name="saveBtnText">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sure_text">Are you sure you want to remove this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_list2">Food List</string>
    <string name="Preferences">Preferences</string>
    <string name="enableDarkMode">Enable Dark Mode</string>
    <string name="switchMode">Switch To Dark Mode</string>
    <string name="switchMode2">Turn Dark Mode Off</string>
    <string name="switchMode1">Turn Dark Mode On</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginButton">Login</string>
</resources>
