<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:text="@string/sure_text"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/yesButton"
                android:background="@android:color/holo_green_dark"
                android:text="@string/yes"
                android:layout_marginTop="30dp"
                android:layout_below="@id/textAlert"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/noButton"
                android:layout_alignParentRight="true"
                android:background="@android:color/holo_red_dark"
                android:text="@string/no"
                android:layout_marginTop="30dp"
                android:layout_below="@id/textAlert"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>